# runloop

./: .clang-format  .gitignore  .projectile  CMakeLists.txt
include/runloop/: loop_imp.h  runloop.h
src/: loop_imp.cpp  sync.h  thread_manager.h
test/: CMakeLists.txt
test/src/: test_runloop.cpp
